[fix] execution par must link tbb

--- a/examples/raytracing/imgui.ini
+++ b/examples/raytracing/imgui.ini
@@ -4,9 +4,10 @@ Size=945,1028
 Collapsed=0
 
 [Window][Scene]
-Pos=409,85
-Size=517,867
+Pos=569,58
+Size=370,776
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -14,15 +15,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=49,82
-Size=321,364
+Pos=30,183
+Size=517,294
 Collapsed=0
 
 [Window][Settings]
-Pos=63,494
-Size=181,186
+Pos=6,836
+Size=933,186
 Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace ID=0xCDC34B94 Window=0x41896AB8 Pos=6,58 Size=933,964 CentralNode=1
+DockSpace     ID=0xCDC34B94 Window=0x41896AB8 Pos=6,58 Size=933,964 Split=Y
+  DockNode    ID=0x00000003 Parent=0xCDC34B94 SizeRef=933,776 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=561,964 CentralNode=1 Selected=0x13926F0B
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=370,964 Selected=0xE192E354
+  DockNode    ID=0x00000004 Parent=0xCDC34B94 SizeRef=933,186 Selected=0x54723243
 
