--- a/examples/raytracing2/imgui.ini
+++ b/examples/raytracing2/imgui.ini
@@ -9,26 +9,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Rendered Image]
-Pos=50,297
-Size=431,446
+Pos=7,90
+Size=558,536
 Collapsed=0
 
 [Window][Controls]
-Pos=378,58
-Size=378,964
+Pos=569,58
+Size=370,482
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Render Settings]
-Pos=758,58
-Size=181,964
+Pos=569,542
+Size=370,480
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
 DockSpace     ID=0xCDC34B94 Window=0x41896AB8 Pos=6,58 Size=933,964 Split=X Selected=0x67284010
-  DockNode    ID=0x00000003 Parent=0xCDC34B94 SizeRef=750,964 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=467,964 CentralNode=1
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=464,964 Selected=0x67284010
-  DockNode    ID=0x00000004 Parent=0xCDC34B94 SizeRef=181,964 Selected=0xCA17ECCA
+  DockNode    ID=0x00000001 Parent=0xCDC34B94 SizeRef=561,964 CentralNode=1 Selected=0x95E3E59D
+  DockNode    ID=0x00000002 Parent=0xCDC34B94 SizeRef=370,964 Split=Y Selected=0x67284010
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=464,482 Selected=0x67284010
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=464,480 Selected=0xCA17ECCA
 
