[feat] update controls

--- a/examples/raytracing/imgui.ini
+++ b/examples/raytracing/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=569,58
-Size=370,776
+Size=370,964
 Collapsed=0
 DockId=0x00000002,0
 
@@ -15,20 +15,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=42,202
-Size=517,294
+Pos=7,119
+Size=556,506
 Collapsed=0
 
 [Window][Settings]
-Pos=6,836
-Size=933,186
+Pos=23,794
+Size=517,186
 Collapsed=0
-DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace     ID=0xCDC34B94 Window=0x41896AB8 Pos=6,58 Size=933,964 Split=Y
-  DockNode    ID=0x00000003 Parent=0xCDC34B94 SizeRef=933,776 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=561,964 CentralNode=1 Selected=0x13926F0B
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=370,964 Selected=0xE192E354
-  DockNode    ID=0x00000004 Parent=0xCDC34B94 SizeRef=933,186 Selected=0x54723243
+DockSpace   ID=0xCDC34B94 Window=0x41896AB8 Pos=6,58 Size=933,964 Split=X
+  DockNode  ID=0x00000001 Parent=0xCDC34B94 SizeRef=561,964 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000002 Parent=0xCDC34B94 SizeRef=370,964 Selected=0xE192E354
 
