[feat] model loaded

--- a/examples/raytracing/imgui.ini
+++ b/examples/raytracing/imgui.ini
@@ -15,13 +15,23 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=87,712
+Pos=47,703
 Size=181,186
 Collapsed=0
 
 [Window][Viewport]
-Pos=7,66
-Size=610,625
+Pos=79,75
+Size=383,337
+Collapsed=0
+
+[Window][Lighting]
+Pos=287,659
+Size=291,324
+Collapsed=0
+
+[Window][Image]
+Pos=64,431
+Size=380,207
 Collapsed=0
 
 [Docking][Data]
