--- a/examples/raytracing/imgui.ini
+++ b/examples/raytracing/imgui.ini
@@ -15,27 +15,28 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=47,703
+Pos=23,672
 Size=181,186
 Collapsed=0
 
 [Window][Viewport]
-Pos=79,75
+Pos=42,86
 Size=383,337
 Collapsed=0
 
 [Window][Lighting]
-Pos=287,659
+Pos=323,692
 Size=291,324
 Collapsed=0
 
 [Window][Image]
-Pos=64,431
-Size=380,207
+Pos=6,58
+Size=612,964
 Collapsed=0
+DockId=0x00000001,0
 
 [Docking][Data]
 DockSpace   ID=0xCDC34B94 Window=0x41896AB8 Pos=6,58 Size=933,964 Split=X
-  DockNode  ID=0x00000001 Parent=0xCDC34B94 SizeRef=612,964 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000001 Parent=0xCDC34B94 SizeRef=612,964 CentralNode=1 Selected=0x1EB64C52
   DockNode  ID=0x00000002 Parent=0xCDC34B94 SizeRef=319,964 Selected=0xE192E354
 
